// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 3481,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "message": "Failed to resolve not-exist",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "moduleType": "js",
      "name": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "size": 20,
      "type": "module",
    },
  ],
}
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 3598,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "size": 26,
      "type": "module",
    },
  ],
}
`;
